--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 :root {
   --teal: #37e7ce;
   --teal_hover: #2ec1ac;
@@ -8,6 +9,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", "sans-serif";
+}
+
+.h-font {
+  font-family: "Merienda", "cursive";
 }
 
 .custom-bg {
@@ -23,4 +28,13 @@
 .form-control::placeholder {
   font-size: 14px;
   color: gray;
+}
+
+#dashboard-menu {
+  position: fixed;
+  height: 100%;
+}
+
+body {
+  background-color: #f8f9fa;
 }
